Update WinForm and MvcApp1
Update WinForm and MvcApp1.

--- a/MvcApp1/MvcApp1/Views/User/Create.cshtml
+++ b/MvcApp1/MvcApp1/Views/User/Create.cshtml
@@ -60,7 +60,7 @@
         </div>
     </div>
     <!--
-    <input id="UiStatus" name="UiStatus" type="hidden" value="@MvcApp1.BAL.CommonHelper.UiStatus.Progress" />
+    @*<input id="UiStatus" name="UiStatus" type="hidden" value="@MvcApp1.BAL.CommonHelper.UiStatus.Progress" />*@
     -->
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
