--- a/MvcApp1/MvcApp1/Views/User/EditConfirm.cshtml
+++ b/MvcApp1/MvcApp1/Views/User/EditConfirm.cshtml
@@ -30,7 +30,7 @@
     @Html.HiddenFor(model => model.Hash)
     @Html.HiddenFor(model => model.Description)
     <!--
-    <input id="UiStatus" name="UiStatus" type="hidden" value="@MvcApp1.BAL.CommonHelper.UiStatus.Confirm" />
+    @*<input id="UiStatus" name="UiStatus" type="hidden" value="@MvcApp1.BAL.CommonHelper.UiStatus.Confirm" />*@
     -->
     <div class="col-md-offset-2 col-md-10">
         <input id="UiConfirm" name="UiConfirm" type="submit" value="Confirm" class="btn btn-default" />
