--- a/AspNetCore6WebApp/AspNetCore6WebApp.Web/Pages/Error.cshtml
+++ b/AspNetCore6WebApp/AspNetCore6WebApp.Web/Pages/Error.cshtml
@@ -1,9 +1,10 @@
 ﻿@page
 @model ErrorModel
 @{
+    Layout = null;
     ViewData["Title"] = "Error";
 }
-
+@*
 <h1 class="text-danger">Error.</h1>
 <h2 class="text-danger">An error occurred while processing your request.</h2>
 
@@ -24,3 +25,22 @@
     For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
     and restarting the app.
 </p>
+*@
+
+<div class="container">
+    <h1 class="text-danger">@ViewData["Title"]</h1>
+
+    @if (Model.ShowRequestId)
+    {
+        <p><strong>Request ID:</strong> <code>@Model.RequestId</code></p>
+    }
+
+    @if (Model.ErrorMessage == null)
+    {
+        <div class="alert alert-danger" role="alert">You are not authorized to access</div>
+    }
+    else
+    {
+        <div class="alert alert-danger" role="alert">@Model.ErrorMessage</div>
+    }
+</div>
